fix: show orderNumber & total in admin, restock time fallback

--- a/public/admin.html
+++ b/public/admin.html
@@ -221,6 +221,7 @@
     function logout(){ if(es) es.close(); location.href='/logout' }
 
     function loadData(){
+      // 商品/下拉/補貨
       fetch('/products').then(r=>r.json()).then(ps=>{
         currentProducts=ps;
         const restock=$('#restockList'), priceSel=$('#priceProductSelect'), delSel=$('#deleteProductSelect'), imgSel=$('#imageProductSelect');
@@ -248,12 +249,14 @@
         });
       });
 
+      // 補貨紀錄（時間 fallback）
       fetch('/restock-history').then(r=>r.json()).then(rs=>{
         const list=$('#historyList'); list.innerHTML='';
         rs.slice().reverse().forEach(x=>{
           const li=document.createElement('li');
           li.className='list-group-item';
-          li.textContent=`${x.time} - ${x.name} 補貨 ${x.quantity} 件`;
+          const when = x.time || (x.createdAt ? new Date(x.createdAt).toLocaleString() : '—');
+          li.textContent=`${when} - ${x.name} 補貨 ${x.quantity} 件`;
           list.appendChild(li);
         });
       });
@@ -302,14 +305,17 @@
           </div>
         </div>`).join('');
       const badge=order.completed?`<span class="badge badge-finished ms-2">已完成</span>`:'';
+      const orderTime = new Date(order.createdAt||Date.now()).toLocaleString();
+      const orderNo = (order.orderNumber ?? '—');
+
       wrap.innerHTML=`
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-start">
             <div>
               <div class="d-flex align-items-center flex-wrap gap-1">
-                <h6 class="mb-0">訂單 #${order._id}｜NT$${order.total}</h6>${badge}
+                <h6 class="mb-0">訂單 #${orderNo}｜NT$${order.total}</h6>${badge}
               </div>
-              <small class="text-muted">${new Date(order.createdAt||Date.now()).toLocaleString()}</small>
+              <small class="text-muted">${orderTime}</small>
             </div>
             ${order.completed?'':`<button class="btn btn-sm btn-success" onclick="markCompleted('${order._id}',this)">完成</button>`}
           </div>
@@ -320,6 +326,7 @@
           </div>
           <hr class="my-2"/>
           ${lines||'<div class="text-muted">（無明細）</div>'}
+          <div class="text-end fw-bold mt-2">總金額：NT$${order.total||0}</div>
         </div>`;
       if(prepend && live.firstChild) live.prepend(wrap); else live.appendChild(wrap);
     }
@@ -345,10 +352,12 @@
         const box=$('#filterResults'); if(!rows.length){box.innerHTML='<div class="text-muted">無符合結果</div>';return}
         box.innerHTML=rows.map(o=>{
           const tag=o.completed?'<span class="badge bg-success ms-1">完成</span>':'';
+          const when=new Date(o.createdAt).toLocaleString();
+          const no = (o.orderNumber ?? '—');
           return `<div class="small border rounded p-2 mb-2">
             <div class="d-flex justify-content-between">
-              <div>#${o._id}｜NT$${o.total} ${tag}</div>
-              <div class="text-muted">${new Date(o.createdAt).toLocaleString()}</div>
+              <div>#${no}｜NT$${o.total} ${tag}</div>
+              <div class="text-muted">${when}</div>
             </div>
             <div class="text-muted">姓名：${escapeHtml(o.name)}｜電話：${escapeHtml(o.phone)}｜取貨：${escapeHtml(o.pickupDate||'—')}</div>
           </div>`;
